java 17
Signed-off-by: Olivier Lamy <olamy@apache.org>