@@ -12,16 +12,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.sources>11</maven.compiler.sources>
-    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.sources>17</maven.compiler.sources>
+    <maven.compiler.release>17</maven.compiler.release>
     <junit.version>5.10.0</junit.version>
     <slf4j.version>2.0.7</slf4j.version>
-    <arquillian.core.version>1.9.3.Final</arquillian.core.version> <!-- 1.7.0.Final-SNAPSHOT -->
+    <arquillian.core.version>1.9.3.Final</arquillian.core.version>
     <arquillian.jetty.version>2.0.1.Final-SNAPSHOT</arquillian.jetty.version>
     <arquillian.jetty.artifactId>arquillian-jetty-embedded-12-ee10</arquillian.jetty.artifactId>
     <jetty.version>12.0.16</jetty.version> <!-- 11.0.9-SNAPSHOT -->
-    <surefire.version>3.0.0</surefire.version> <!-- 3.0.0-M7-SNAPSHOT -->
-<!--    <jakarta.tck.version>10.0.0-SNAPSHOT</jakarta.tck.version>-->
+    <surefire.version>3.0.0</surefire.version>
     <fork.argLine>-Xmx8g -Xms4g</fork.argLine>
     <http2.timeout></http2.timeout>
   </properties>
@@ -238,12 +237,6 @@
               <goal>verify</goal>
             </goals>
             <configuration>
-              <!-- this need some times to run -->
-              <argLine>${fork.argLine} -Duser.language=en -Duser.country=US -Djava.locale.providers=COMPAT,CLDR
-                -Djava.protocol.handler.pkgs=javax.net.ssl
-                -Djavax.net.ssl.keyStore=${project.build.testOutputDirectory}/certificates/clientcert.jks
-                -Djavax.net.ssl.keyStorePassword=changeit
-                -Djavax.net.ssl.trustStore=${project.build.directory}/cacerts.jks</argLine>
               <forkedProcessTimeoutInSeconds>15000</forkedProcessTimeoutInSeconds>
               <dependenciesToScan>
                 <dependenciesToScan>jakarta.tck:websocket-tck-spec-tests</dependenciesToScan>
@@ -255,12 +248,6 @@
                 <ws_wait>5</ws_wait>
                 <porting.ts.url.class.1>com.sun.ts.tests.websocket.lib.implementation.sun.common.SunRIURL</porting.ts.url.class.1>
               </systemProperties>
-              <!--            <excludes>-->
-              <!--              <exclude>**/AppTest**</exclude>-->
-              <!--            </excludes>-->
-              <!--            <includes>-->
-              <!--              <include>**/*IT*</include>-->
-              <!--            </includes>-->
               <trimStackTrace>false</trimStackTrace>
             </configuration>
           </execution>
